crates/code-graph-tools/tests/snapshots/snapshot_responses__response_get_class_hierarchy_go_interface_reader.snap
---
source: crates/code-graph-tools/tests/snapshot_responses.rs
expression: parsed
---
{
  "hierarchy": {
    "name": "Reader"
  },
  "max_nodes": 250,
  "total_nodes_seen": 1,
  "truncated": false
}
