crates/code-graph-tools/tests/snapshots/snapshot_responses__response_get_class_hierarchy_rust_trait_greet.snap
---
source: crates/code-graph-tools/tests/snapshot_responses.rs
expression: parsed
---
{
  "hierarchy": {
    "derived": [
      {
        "bases": [
          {
            "name": "Greet"
          }
        ],
        "name": "Greeter"
      }
    ],
    "name": "Greet"
  },
  "max_nodes": 250,
  "total_nodes_seen": 2,
  "truncated": false
}
