crates/code-graph-tools/tests/snapshots/snapshot_responses__response_get_class_hierarchy_ue_aactor.snap
---
source: crates/code-graph-tools/tests/snapshot_responses.rs
expression: parsed
---
{
  "hierarchy": {
    "bases": [
      {
        "derived": [
          {
            "name": "AActor"
          }
        ],
        "name": "UObject"
      }
    ],
    "derived": [
      {
        "bases": [
          {
            "name": "AActor"
          }
        ],
        "derived": [
          {
            "name": "ACharacter"
          }
        ],
        "name": "APawn"
      },
      {
        "bases": [
          {
            "name": "AActor"
          }
        ],
        "name": "UDoubleMacro"
      },
      {
        "bases": [
          {
            "name": "AActor"
          }
        ],
        "name": "UNoMacro"
      }
    ],
    "name": "AActor"
  },
  "max_nodes": 250,
  "total_nodes_seen": 6,
  "truncated": false
}
