crates/code-graph-tools/tests/snapshots/snapshot_responses__response_get_class_hierarchy_ue_double_macro.snap
---
source: crates/code-graph-tools/tests/snapshot_responses.rs
expression: parsed
---
{
  "hierarchy": {
    "bases": [
      {
        "name": "AActor"
      }
    ],
    "name": "UDoubleMacro"
  },
  "max_nodes": 250,
  "total_nodes_seen": 2,
  "truncated": false
}
