crates/code-graph-tools/tests/snapshots/snapshot_responses__response_get_coupling_engine_cpp_incoming.snap
---
source: crates/code-graph-tools/tests/snapshot_responses.rs
assertion_line: 1030
expression: parsed
---
{
  "limit": 50,
  "next_offset": null,
  "offset": 0,
  "results": [
    {
      "count": 3,
      "file": "[testdata]/main.cpp"
    }
  ],
  "total": 1,
  "truncated": false
}
