crates/code-graph-tools/tests/snapshots/snapshot_responses__response_get_coupling_engine_cpp_outgoing.snap
---
source: crates/code-graph-tools/tests/snapshot_responses.rs
assertion_line: 1008
expression: parsed
---
{
  "limit": 50,
  "next_offset": null,
  "offset": 0,
  "results": [
    {
      "count": 3,
      "file": "[testdata]/utils.cpp"
    },
    {
      "count": 1,
      "file": "[testdata]/engine.h"
    },
    {
      "count": 1,
      "file": "[testdata]/utils.h"
    }
  ],
  "total": 3,
  "truncated": false
}
