crates/code-graph-tools/tests/snapshots/snapshot_responses__response_get_dependencies_engine_cpp.snap
---
source: crates/code-graph-tools/tests/snapshot_responses.rs
assertion_line: 421
expression: parsed
---
{
  "limit": 100,
  "next_offset": null,
  "offset": 0,
  "results": [
    {
      "file": "[testdata]/engine.h",
      "kind": "includes",
      "line": 1
    },
    {
      "file": "[testdata]/utils.h",
      "kind": "includes",
      "line": 2
    }
  ],
  "total": 2,
  "truncated": false
}
