crates/code-graph-tools/tests/snapshots/snapshot_responses__response_get_dependencies_python_models.snap
---
source: crates/code-graph-tools/tests/snapshot_responses.rs
expression: parsed
---
[
  "abc",
  "typing"
]
