crates/code-graph-tools/tests/snapshots/snapshot_responses__response_get_file_symbols_byte_budget_truncated.snap
---
source: crates/code-graph-tools/tests/snapshot_responses.rs
expression: parsed
---
{
  "limit": 20,
  "next_offset": 4,
  "offset": 0,
  "results": [
    {
      "id": "[testdata]/big.cpp:func_000",
      "kind": "function",
      "line": 1,
      "name": "func_000"
    },
    {
      "id": "[testdata]/big.cpp:func_001",
      "kind": "function",
      "line": 2,
      "name": "func_001"
    },
    {
      "id": "[testdata]/big.cpp:func_002",
      "kind": "function",
      "line": 3,
      "name": "func_002"
    },
    {
      "id": "[testdata]/big.cpp:func_003",
      "kind": "function",
      "line": 4,
      "name": "func_003"
    }
  ],
  "total": 30,
  "truncated": true
}
